# Module_4_Exam_Coding

./: CMakeLists.txt  main.cpp
include/: Class.h  Game.h  Hero.h  Mage.h  Movie.h  Playable.h  Record.h  Warrior.h
src/: Class.cpp  Game.cpp  Hero.cpp  Mage.cpp  Movie.cpp  Playable.cpp  Record.cpp  Warrior.cpp
